Fixed a line spacing bug

--- a/css/home.css
+++ b/css/home.css
@@ -72,6 +72,6 @@ mark.info{
     font-size: 20px;
 }
 .search::-webkit-search-cancel-button{-webkit-appearance: none;}
-.h1{
+h1{
     line-height: 10px;
 }
